level 2 works now + shields (?) and boss cropped